Style header to fix to top

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
     justify-content: space-between;
     padding: 25px;
     background-color: blue;
+    position: fixed;
+    left: 50px;
+    right: 50px;
+    top: 0;
 }
 
 .logo {
@@ -30,6 +34,7 @@ body {
     padding: 25px;
     gap: 25px;
     background-color: lightblue;
+    margin-top: 100px;
 }
 
 .desc {
