--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,11 @@ img {
 .cta-head {
     font-weight: 900;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    height: 100px;
+}
