--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin-left: 100px;
     margin-right: 100px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .header {
@@ -10,11 +10,12 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 25px;
-    background-color: blue;
+    background-color: #1f2937;
     position: fixed;
-    left: 50px;
-    right: 50px;
+    left: 100px;
+    right: 100px;
     top: 0;
+    color: white;
 }
 
 .logo {
@@ -33,12 +34,13 @@ body {
     justify-content: space-between;
     padding: 25px;
     gap: 25px;
-    background-color: lightblue;
-    margin-top: 100px;
+    background-color: #9baabe;
+    margin-top: 70px;
+    color: white;
 }
 
 .desc {
-    width: 200vh;
+    width: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -69,6 +71,7 @@ button {
 }
 
 .cards {
+    color: gray;
     display: flex;
     font-size: small;
     gap: 100px;
@@ -77,12 +80,18 @@ button {
     text-align: center;
 }
 
+.card-1, .card-2, .card-3 {
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+}
+
 img {
     border-radius: 25px;
 }
 
 .quote {
-    background-color: lightblue;
+    background-color: #9baabe;
     display: flex;
     flex-direction: column;
     padding: 75px;
